# Android-Game-Test

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  common.hpp  engine.hpp  main.cpp  native_engine.cpp  native_engine.hpp
app/src/main/java/com/example/gametest/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
